--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
+	<li>Kubernets</li>
         <li>Curso: Integração Contínua (Maturidade no Desenvolvimento)</li>
     </ul>
 </body>
