Correação curso, versão Ana

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
+        <li>Docker: Criando containers sem dor de cabeça, versão da Ana</li>
         <li>Ansible</li>
 	    <li>Kubernets</li>
         <li>Curso: Integração Contínua (Maturidade no Desenvolvimento)</li>
