Alterando curso de Kubernets

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Docker: Criando containers sem dor de cabeça, versão vini</li>
         <li>Ansible</li>
         <li>Curso: Integração Contínua (Maturidade no Desenvolvimento)</li>
+        <li>Curso: Kubernets</li>
     </ul>
 </body>
 </html>
