--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça, versão vini</li>
-        <li>Ansible</li>
+        <li>Ansible: Sua infraestrutura como código</li>
         <li>Curso: Integração Contínua (Maturidade no Desenvolvimento)</li>
         <li>Curso: Kubernets</li>
     </ul>
